# Uni-Lab-OS

./: .gitignore  CONTRIBUTORS  MANIFEST.in  README.md  README_zh.md  UniLab_LaiYu_控制架构详解.md  XYZ_集成功能说明.md  bioyond_yihua_YB.json  celljson.json  deck.json  deck_9300_new.json  mcp-config-template.json  setup.cfg  setup.py  test.json  unilabos-linux-64.yaml  unilabos-osx-64.yaml  unilabos-osx-arm64.yaml  unilabos-win64.yaml  unilab与组装段交互流程0811-批注-0905（解读版）.docx
.conda/: recipe.yaml  recipe_new.yaml
.conda/scripts/: post-link.bat  post-link.sh
.github/workflows/: conda-build.yml  conda-pack-build.yml  deploy-docs.yml  docs.yml  multi-platform-build.yml  unilabos-conda-build.yml
docs/: conf.py  intro.md  requirements.txt
docs/boot_examples/: liquid_handler.md  organic_synthesis.md
docs/concepts/: 02-topology-and-chemputer-compile.md
docs/developer_guide/: action_includes.md  add_action.md  add_batteryPCL.md  add_batteryPLC.md  add_device.md  add_yaml.md  materials_tutorial.md  workstation_architecture.md
docs/user_guide/: configuration.md  installation.md  launch.md  quick_install_guide.md
recipes/: conda_build_config.yaml  macos_sdk_config.yaml
recipes/msgs/: bld_ament_cmake.bat  build_ament_cmake.sh  recipe.yaml
recipes/ros-humble-unilabos-msgs/: recipe.yaml
recipes/unilabos/: recipe.yaml
scripts/: create_readme.py  create_zip_archive.py  get_package_version.py  install_unilab.bat  install_unilab.sh  unilabos-linux-64.yaml  unilabos-win64.yaml  verify_installation.py
test/commands/: resource_add.md
test/experiments/: Grignard_flow_batchreact_single.graphml  biomek.json  camera.json  dispensing_station_bioyond.json  laiyu_liquid.json  mock_reactor.json  plr_test_converted.json  plr_test_converted_slim.json  prcxi.json  prcxi_9300.json  prcxi_9320.json  prcxi_9320_visual.json  reaction_station_bioyond.json  reaction_station_bioyond_test.json  test_laiyu.json  test_moveit.json  test_neware.json  workshop.json
test/registry/: example_devices.py
test/resources/: bioyond_materials.json  bioyond_materials_liquidhandling_1.json  bioyond_materials_liquidhandling_2.json  bioyond_materials_reaction.json  bottle_carrier.py  test_bottle_carrier.py  test_converter_bioyond.py  test_itemized_carrier.py  test_resourcetreeset.py
unilabos/app/: backend.py  communication.py  controler.py  main.py  model.py  mq.py  register.py  ws_client.py
unilabos/compile/: __init__.py  add_protocol.py  adjustph_protocol.py  centrifuge_protocol.py  clean_vessel_protocol.py  dissolve_protocol.py  dry_protocol.py  evacuateandrefill_protocol.py  evacuateandrefill_protocol_old.py  evaporate_protocol.py  filter_protocol.py  filter_through_protocol.py  heatchill_protocol.py  hydrogenate_protocol.py  pump_protocol.py  recrystallize_protocol.py  reset_handling_protocol.py  run_column_protocol.py  separate_protocol.py  stir_protocol.py  transfer_protocol.py  wash_solid_protocol.py
unilabos/config/: config.py  example_config.py
unilabos/device_comms/: coin_cell_assembly_workstation.py  workstation_base.py  workstation_communication.py  workstation_http_service.py  workstation_material_management.py
unilabos/device_mesh/: resource_visalization.py  ros2_controllers.yaml  view_robot.rviz
unilabos/utils/: __init__.py  (+6 more)
unilabos_msgs/: CMakeLists.txt  package.xml
unilabos_msgs/action/: AGVTransfer.action  Add.action  AddSolid.action  AdjustPH.action  Centrifuge.action  Clean.action  CleanVessel.action  Crystallize.action  DefaultLayoutRecommendLayout.action  DispenStationSolnPrep.action  DispenStationVialFeed.action  Dissolve.action  Dry.action  EmptyIn.action  EvacuateAndRefill.action  Evaporate.action  Filter.action  FilterThrough.action  FloatSingleInput.action  HeatChill.action  HeatChillStart.action  HeatChillStop.action  Hydrogenate.action  IntSingleInput.action  LiquidHandlerAdd.action  LiquidHandlerAspirate.action  LiquidHandlerDiscardTips.action  LiquidHandlerDispense.action  LiquidHandlerDropTips.action  LiquidHandlerDropTips96.action  LiquidHandlerIncubateBiomek.action  LiquidHandlerMix.action  LiquidHandlerMoveBiomek.action  LiquidHandlerMoveLid.action  LiquidHandlerMovePlate.action  LiquidHandlerMoveResource.action  LiquidHandlerMoveTo.action  LiquidHandlerOscillateBiomek.action  LiquidHandlerOscillationBiomek.action  LiquidHandlerPauseBiomek.action  (+56 more)
(+374 files in other folders)
